Fixed default badge visibility for smaller screens, footer links

--- a/sass/badge_only.sass
+++ b/sass/badge_only.sass
@@ -82,7 +82,7 @@
         text-align: center
     @media screen and (max-width: 768px)
       width: 85%
-      display: none
+      display: none !important
       &.shift
         display: block
 
